Animations and User Interface changes

--- a/src/add.html
+++ b/src/add.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="../css/forms.css">
 		<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
 		<link rel="manifest" href="../manifest.json">
+		<link rel="stylesheet" href="../css/animate.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src='../js/notifications.js'></script>
 	</head>
@@ -16,7 +17,7 @@
 			<input type="file" id="myFile" multiple size="50" onchange="uploadIcon()">
 		</div>
 
-		<div class="forms" id="addForm">
+		<div class="forms animated pulse" id="addForm">
 			<h2>Add A Habit</h2>
 			<form id ="form" action="#">
 				<p><label><span id="title_text">Habit Title</span></label></p>
