--- a/src/welcome.html
+++ b/src/welcome.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Welcome to Virtue/Vice!</title>
 		<link rel="stylesheet" href="../css/welcome.css">
-		<link rel="stylesheet" href="../css/animate.min.css">
+		<link rel="stylesheet" href="../css/animate.css">
 	</head>
 	<body>
 	  <div class="welcome">
