--- a/src/list.html
+++ b/src/list.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/list.css">
-    <link rel="stylesheet" href="../css/animate.css">
+    <!-- <link rel="stylesheet" href="../css/animate.css"> -->
 
     <link rel="manifest" href="../manifest.json">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
