--- a/src/list.html
+++ b/src/list.html
@@ -11,9 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
     <!--[if lt IE 13]>
-    <script>
-        console.log("fuck IE")
-    </script>
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
 <body>
