--- a/src/list.html
+++ b/src/list.html
@@ -10,8 +10,11 @@
     <link rel="manifest" href="../manifest.json">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
-    <!--[if lt IE 13]>
+    <!--[if IE]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <script>
+            console.log("hello world")
+        </script>
     <![endif]-->
 </head>
 <body>
