--- a/src/edit.html
+++ b/src/edit.html
@@ -8,7 +8,7 @@
 		<link rel="manifest" href="../manifest.json">
 		<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		
+		<script src='../js/notifications.js'></script>
 	</head>
 	<body>
 		<div class="forms" id="editForm">
@@ -53,7 +53,7 @@
 					<label> <input style="display:none" id="thrice" type="radio" name="day" value="three"><span>3</span></label>
 					<span id="times">times</span>
 				</div>
-				<p><label><span id="others_text">Others: </span><input id="others" type="text" name="day" placeholder="More than 3 times"></label></p>	
+				<p><label><span id="others_text">Others: </span><input id="others" type="text" name="day" placeholder="More than 3 times"></label></p>
 
 				<p id="notifications"><label>Notifications:</label></p>
 				<div class="onoffswitch" >
