--- a/src/list.html
+++ b/src/list.html
@@ -10,12 +10,8 @@
     <link rel="manifest" href="../manifest.json">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
-    <!--[if IE]>
-        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <script>
-            console.log("hello world")
-        </script>
-    <![endif]-->
+    <!--[if !IE]><!--><script>console.log("fuck IE")</script><!--<![endif]-->
+    <!--[if IE]><script src="jquery-1.7.2.min.js"></script><![endif]-->
 </head>
 <body>
     <section>
