Revert "Animations and User Interface changes"
This reverts commit 6e82b0471fd1e611405554591f4be9a36de42b97.

--- a/src/list.html
+++ b/src/list.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/list.css">
-    <!-- <link rel="stylesheet" href="../css/animate.css"> -->
-
     <link rel="manifest" href="../manifest.json">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
@@ -14,7 +12,7 @@
 <body>
     <section>
         <h1>Habit List</h1>
-        <ul id="habit-list" class="animated zoomInDown">
+        <ul id="habit-list">
             <template id="habit-template">
                 <li>
                     <ul class="habit-info">
@@ -65,7 +63,7 @@
         </ul>
     </section>
 
-    <button class="animated fadeInRightBig" type="button" id="addHabit" onclick="location.href='add.html'" title="add habit">+</button>
+    <button type="button" id="addHabit" onclick="location.href='add.html'" title="add habit">+</button>
 
     <script src="../js/list.js"></script>
 </body>
