--- a/src/list.html
+++ b/src/list.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
 </head>
 <body>
+    <p><label class="warning" id="notSupported" style="display:none">This website doesn't support your browser. Only Chrome, Safari, and Firefox are supported.</label></p>
     <section>
         <h1>Habit List</h1>
         <ul id="habit-list">
