added logout button and error checking

--- a/src/welcome.html
+++ b/src/welcome.html
@@ -6,6 +6,22 @@
 		<title>Welcome to Virtue/Vice!</title>
 		<link rel="stylesheet" href="../css/welcome.css">
 		<link rel="stylesheet" href="../css/animate.min.css">
+
+
+<script type="text/javascript">
+  rg4js('apiKey', '5HU2mFdkS/e5Tur8l31gcA==');
+  rg4js('attach', true);
+  rg4js('enablePulse', true);
+</script>
+
+		<script type="text/javascript">
+  !function(a,b,c,d,e,f,g,h){a.RaygunObject=e,a[e]=a[e]||function(){
+  (a[e].o=a[e].o||[]).push(arguments)},f=b.createElement(c),g=b.getElementsByTagName(c)[0],
+  f.async=1,f.src=d,g.parentNode.insertBefore(f,g),h=a.onerror,a.onerror=function(b,c,d,f,g){
+  h&&h(b,c,d,f,g),g||(g=new Error(b)),a[e].q=a[e].q||[],a[e].q.push({
+  e:g})}}(window,document,"script","https://cdn.raygun.io/raygun4js/raygun.min.js","rg4js");
+</script>
+
 	</head>
 	<body>
 	  <div class="welcome">
