--- a/src/signup.html
+++ b/src/signup.html
@@ -24,6 +24,7 @@
 
         	<div class="inputs">
         		<p><label class="error_message" id="noEmail" style="display:none">Please input an email address.</label></p>
+                <p><label class="error_message" id="emailTaken" style="display:none">This email address has already been registered.  Try again?</label></p>
             	<input id="validEmail" type="email" placeholder="Email Address" autofocus />
 
             	<p><label class="error_message" id="noPass" style="display:none">Please input a password.</label></p>
