changed logout to word button

--- a/src/list.html
+++ b/src/list.html
@@ -24,8 +24,8 @@
         <h1>Habit List</h1>
 
         <div class="logout-button">
-         <button type="button" class="logout op-logout" onclick="logOff();" title="logout">
-            <img src="../img/logout2.png" alt="Logout">
+         <button  class="logout op-logout" onclick="logOff();" title="logout">
+            <p id="Logout">Logout</p>
          </button>
         </div>
 
