Minifed JS, CSS, and HTML

--- a/src/list.html
+++ b/src/list.html
@@ -1,87 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Virtue / Vice</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../css/list.css">
-    <link rel="manifest" href="../manifest.json">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
-
-    <script type="text/javascript">
-      !function(a,b,c,d,e,f,g,h){a.RaygunObject=e,a[e]=a[e]||function(){
-      (a[e].o=a[e].o||[]).push(arguments)},f=b.createElement(c),g=b.getElementsByTagName(c)[0],
-      f.async=1,f.src=d,g.parentNode.insertBefore(f,g),h=a.onerror,a.onerror=function(b,c,d,f,g){
-      h&&h(b,c,d,f,g),g||(g=new Error(b)),a[e].q=a[e].q||[],a[e].q.push({
-      e:g})}}(window,document,"script","https://cdn.raygun.io/raygun4js/raygun.min.js","rg4js");
-    </script>
-
-</head>
-<body>
-    <p><label class="warning" id="notSupported" style="display:none">This website doesn't support your browser. Only Chrome, Safari, and Firefox are supported.</label></p>
-    <section>
-        <h1>Habit List</h1>
-
-        <div class="logout-button">
-         <button  class="logout op-logout" onclick="logOff();" title="logout">
-            <p id="Logout">Logout</p>
-         </button>
-        </div>
-
-        <ul id="habit-list">
-            <template id="habit-template">
-                <li>
-                    <ul class="habit-info">
-                        <li class="title-li"><div class="habit-name hidden-resizer">Sleep 8 hours</div></li>
-                        <li><img class="habit-icon" src="../img/sleep.jpg" alt="habit icon"></li>
-                    </ul>
-
-                    <div class="delete-habit">
-                        <button type="button" class="delete op-del" onclick="deleteHabit(this);" title="delete habit">
-                            <img src="../img/smoke.png" alt="Del">
-                        </button>
-                    </div>
-
-                    <div class="message">
-                        <div class="message-total">
-                            <strong class="currStreak">2</strong> times in a row! Best Record: <strong class="bestStreak">5</strong><br>
-                            <div id="progressBar"><div></div></div>
-                        </div><br>
-                        <span class="message-today">Completed <strong class="completed">1</strong>/<strong class="frequencyPerDay">1</strong> for today!</span><br>
-                        <span class="message-missed">Missed <strong class="missed">0</strong> time(s) today</span>
-                    </div>
-
-
-                    <div class="days">
-                        <p id="onSunday" class="dayText">S</p>
-                        <p id="onMonday" class="dayText">M</p>
-                        <p id="onTuesday" class="dayText">T</p>
-                        <p id="onWednesday" class="dayText">W</p>
-                        <p id="onThursday" class="dayText">T</p>
-                        <p id="onFriday" class="dayText">F</p>
-                        <p id="onSaturday" class="dayText">S</p>
-                    </div>
-
-                    <div class="habit-op">
-                        <button type="button" class="op op-done" id="thumbsUp" onclick="completeHabit(this); showMsg(this);" title="done">
-                            <img src="../img/thumbsUp.svg" alt="Done">
-                        </button>
-                        <button type="button" class="op op-down" id="thumbsDown" onclick="failHabit(this); showMsg(this);" title="fail">
-                            <img src="../img/thumbsdown.svg" alt="Down">
-                        </button>
-                        <button type="button" class="op op-edit" onclick="editHabit(this);" title="edit habit">
-                            <img src="../img/edit.svg" alt="Edit">
-                        </button>
-
-                    </div>
-                </li>
-            </template>
-        </ul>
-    </section>
-
-    <button type="button" id="addHabit" onclick="location.href='add.html'" title="add habit">+</button>
-
-    <script src="../js/list.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head> <title>Virtue / Vice</title> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1"> <link rel="stylesheet" type="text/css" href="../css/list.min.css"> <link rel="manifest" href="../manifest.json"> <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script><script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script> <script type="text/javascript">!function(a,b,c,d,e,f,g,h){a.RaygunObject=e,a[e]=a[e]||function(){(a[e].o=a[e].o||[]).push(arguments)},f=b.createElement(c),g=b.getElementsByTagName(c)[0], f.async=1,f.src=d,g.parentNode.insertBefore(f,g),h=a.onerror,a.onerror=function(b,c,d,f,g){h&&h(b,c,d,f,g),g||(g=new Error(b)),a[e].q=a[e].q||[],a[e].q.push({e:g})}}(window,document,"script","https://cdn.raygun.io/raygun4js/raygun.min.js","rg4js"); </script></head><body> <p><label class="warning" id="notSupported" style="display:none">This website doesn't support your browser. Only Chrome, Safari, and Firefox are supported.</label></p><section> <h1>Habit List</h1> <div class="logout-button"> <button class="logout op-logout" onclick="logOff();" title="logout"> <p id="Logout">Logout</p></button> </div><ul id="habit-list"> <template id="habit-template"> <li> <ul class="habit-info"> <li class="title-li"><div class="habit-name hidden-resizer">Sleep 8 hours</div></li><li><img class="habit-icon" src="../img/sleep.jpg" alt="habit icon"></li></ul> <div class="delete-habit"> <button type="button" class="delete op-del" onclick="deleteHabit(this);" title="delete habit"> <img src="../img/smoke.png" alt="Del"> </button> </div><div class="message"> <div class="message-total"> <strong class="currStreak">2</strong> times in a row! Best Record: <strong class="bestStreak">5</strong><br><div id="progressBar"><div></div></div></div><br><span class="message-today">Completed <strong class="completed">1</strong>/<strong class="frequencyPerDay">1</strong> for today!</span><br><span class="message-missed">Missed <strong class="missed">0</strong> time(s) today</span> </div><div class="days"> <p id="onSunday" class="dayText">S </p><p id="onMonday" class="dayText">M </p><p id="onTuesday" class="dayText">T </p><p id="onWednesday" class="dayText">W </p><p id="onThursday" class="dayText">T </p><p id="onFriday" class="dayText">F </p><p id="onSaturday" class="dayText">S</p></div><div class="habit-op"> <button type="button" class="op op-done" id="thumbsUp" onclick="completeHabit(this); showMsg(this);" title="done"> <img src="../img/thumbsUp.svg" alt="Done"> </button> <button type="button" class="op op-down" id="thumbsDown" onclick="failHabit(this); showMsg(this);" title="fail"> <img src="../img/thumbsdown.svg" alt="Down"> </button> <button type="button" class="op op-edit" onclick="editHabit(this);" title="edit habit"> <img src="../img/edit.svg" alt="Edit"> </button> </div></li></template> </ul> </section> <button type="button" id="addHabit" onclick="location.href='add.html'" title="add habit">+</button> <script src="../js/list-min.js"></script></body></html>
